# NotebookLM-OnSteroids

./: .gitignore  README.md  SKILL.md  install.py  pipeline_example.json  pyproject.toml
docs/superpowers/plans/: 2026-03-30-skill-install.md
docs/superpowers/specs/: 2026-03-30-skill-install-design.md
nblm_skill/: __init__.py  nblm_list.py  nblm_pipeline.py  nblm_query.py
tests/: test_install.py
